pseudocode written and letter array created

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
   <head>
-    <title>Word Guess Game</title>
+    <meta charset="UTF-8">
+    <title>Psychic Game</title>
   </head>
   <body>
-    <p>Game Goes Here!</p>
+
+      <div>
+        <p>The Psychic Game!</p>
+          <p id="directions-text">Guess what letter the computer is thinking of. You get 9 guesses</p>
+          <p id="wins-text"></p>
+          <p id="losses-text"></p>
+          <p id="userchoice-text"></p>
+        </div>
+
+    <script type="text/javascript">
+
+    // create an array listing all of the computer's options.
+      var letters = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"];
+    
+    // create variable to track user's correct guesses (win counter)
+
+    // create variable to track user's incorrect guesses
+
+    // create variable to track how many guesses user has left
+
+    // create display to show guesses so far
+
+    // reset game when user is out of guesses
+
+    // create loser counter to track losses
+
+    
+
+
+
+    </script>
+
   </body>
 </html>
 
@@ -24,3 +56,11 @@
 8. When the player wins, increase the Wins counter and start the game over again (without refreshing the page).
 
 9. When the player loses, increase the Losses counter and restart the game without a page refresh (just like when the user wins). -->
+
+
+<!-- // for(var i = 0 ; i<letters.length; i++){
+  //   console.log(letters[i])
+  // }
+  
+//   var letter = letters[Math.floor(Math.random()*letters.length)];
+//   return letter -->
